feature section added

--- a/index.html
+++ b/index.html
@@ -253,9 +253,29 @@
         </div>
       </div>
     </section>
-    <!-- featuer section -->
+    <!-- feature section -->
 
-    <section></section>
+    <section class="feature-section">
+      <div class="feature-section-container">
+        <div class="feature-section-1 flex item-center">
+          <span></span>
+          <div class="feature-section-title">
+            <p class="">Featured In</p>
+          </div>
+          <span></span>
+        </div>
+        <div class="feature-container-img">
+          <img
+            class="lazy"
+            alt="Featured in The new your times"
+            height="112"
+            width="553"
+            src="https://pristinegreencleaning.com/assets/images/nytimes-black.png"
+            style
+          />
+        </div>
+      </div>
+    </section>
 
     <!-- Slider -->
     <section class="slider-section">
