--- a/index.html
+++ b/index.html
@@ -534,6 +534,301 @@
       </div>
     </section>
 
+    <!-- Services section -->
+    <section class="services-section">
+      <div
+        class="services-section-container flex flex-col justify-center item-center"
+      >
+        <!-- services section header -->
+        <div class="services-section-header">
+          <p>PRISTINEGREEN CLEANING</p>
+          <p>
+            Top-Rated Carpet and Upholstery Cleaning Company in NYC, Brooklyn,
+            Queens, Bronx, & Long Island
+          </p>
+          <p>Offering Both Commercial & Residential Carpet Cleaning Services</p>
+        </div>
+        <!-- section accordion & image -->
+        <div class="services-section-accordion flex justify-center">
+          <!-- accordion -->
+          <div class="services-section-accordion-container flex flex-col">
+            <div class="services-section-accordion-containers">
+              <div class="services-section-accordion-header">
+                <span>What services do you provide?</span>
+                <button>
+                  <i class="fa-sharp fa-solid fa-chevron-down"></i>
+                </button>
+              </div>
+              <div class="services-section-accordion-content">
+                <p>
+                  We provide a variety of upholstery and carpet cleaner services
+                  in NYC including sofa cleaning, area rug cleaning, oriental
+                  rug cleaning, traditional rug cleaning, mattress cleaning,
+                  couch cleaning, armchair cleaning, furniture cleaning and
+                  more.
+                </p>
+              </div>
+            </div>
+            <div class="services-section-accordion-containers">
+              <div class="services-section-accordion-header">
+                <span>What services do you provide?</span>
+                <button>
+                  <i class="fa-sharp fa-solid fa-chevron-down"></i>
+                </button>
+              </div>
+
+              <div class="services-section-accordion-content hidden">
+                <p></p>
+              </div>
+            </div>
+            <div class="services-section-accordion-containers">
+              <div class="services-section-accordion-header">
+                <span>What services do you provide?</span>
+                <button>
+                  <i class="fa-sharp fa-solid fa-chevron-down"></i>
+                </button>
+              </div>
+              <div class="services-section-accordion-content hidden">
+                <p></p>
+              </div>
+            </div>
+            <div class="services-section-accordion-containers">
+              <div class="services-section-accordion-header">
+                <span>What services do you provide?</span>
+                <button>
+                  <i class="fa-sharp fa-solid fa-chevron-down"></i>
+                </button>
+              </div>
+              <div class="services-section-accordion-content hidden">
+                <p></p>
+              </div>
+            </div>
+          </div>
+          <!-- img -->
+          <div class="service-section-img hidden">
+            <img
+              src="https://pristinegreencleaning.com/assets/images/after-clean.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Callback-form section -->
+    <section class="callback-form-section">
+      <div class="callback-form-section-container">
+        <div
+          class="flex callback-form-section-container-1 gap-1 justify-center item-center"
+        >
+          <span class="callback-form-section-container-title"
+            >Request Carpet and Upholstery Cleaning Now!
+          </span>
+          <input
+            type="text"
+            placeholder="Phone number"
+            class="callback-form-section-container-input"
+          />
+          <input
+            type="text"
+            placeholder="Item clean"
+            class="callback-form-section-container-input"
+          />
+          <button class="callback-form-section-container-btn">Request</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- offering services section -->
+    <section class="offerservice-section">
+      <div class="offerservice-section-container flex">
+        <div class="offerservice-section-container-1">
+          <div class="offerservice-section-container-1-title">
+            <h3>
+              We offer a variety of rug and furniture cleaning services...
+            </h3>
+          </div>
+          <div class="flex offerservice-section-list-container gap-4">
+            <!-- services-1 -->
+            <ul>
+              <li>
+                <img
+                  class="lazy"
+                  alt="Carpet Cleaning Services NYC"
+                  height="54"
+                  width="54"
+                  src="https://dev.pristinegreencleaning.com/assets/icons/icon-1.png"
+                  style
+                />
+                <a href="#"> Carpet Cleaning </a>
+              </li>
+              <li>
+                <img
+                  class="lazy"
+                  alt="Upholstery Cleaning NYC"
+                  height="54"
+                  width="54"
+                  src="https://dev.pristinegreencleaning.com/assets/icons/icon-3a.png"
+                  style
+                />
+                <a href="#">Upholstery Cleaning</a>
+              </li>
+              <li>
+                <img
+                  class="lazy"
+                  alt="Rug Cleaner NYC"
+                  height="54"
+                  width="54"
+                  src="https://dev.pristinegreencleaning.com/assets/icons/icon-2a.png"
+                  style
+                />
+                <a href="#"> Area Rug Cleaning </a>
+              </li>
+              <li>
+                <img
+                  class="lazy"
+                  alt="Mattress Cleaning NYC"
+                  height="54"
+                  width="54"
+                  src="https://dev.pristinegreencleaning.com/assets/icons/upholstery-cleaning-mattress-cleaning-NYC-icon.png"
+                  style
+                />
+                <a href="Matterss Cleaning">Mattress Cleaning</a>
+              </li>
+              <li>
+                <img
+                  class="lazy"
+                  alt="Oriental and Persian Rug Cleaning NYC"
+                  height="54"
+                  width="54"
+                  src="https://dev.pristinegreencleaning.com/assets/icons/oriental-rug-cleaning-NYC-icon.png"
+                  style
+                />
+                <a href="#">Oriental Rug Cleaning</a>
+              </li>
+            </ul>
+            <!-- services-2 -->
+            <ul>
+              <li>
+                <img
+                  rel="canonical"
+                  class="lazy"
+                  alt="Green Carpet Cleaner NYC"
+                  height="54"
+                  width="54"
+                  src="https://dev.pristinegreencleaning.com/assets/icons/icon-5a.png"
+                  style
+                />
+                <a href="#">Green Carpet Cleaner</a>
+              </li>
+              <li>
+                <img
+                  rel="canonical"
+                  class="lazy"
+                  alt="Professional Office and Commercial Carpet Cleaning Services"
+                  height="54"
+                  width="54"
+                  src="https://dev.pristinegreencleaning.com/assets/icons/icon-4a.png"
+                  style
+                />
+                <a href="#">Commercial Cleaning</a>
+              </li>
+              <li>
+                <img
+                  rel="canonical"
+                  class="lazy"
+                  alt="Sofa Cleaning NYC"
+                  height="54"
+                  width="54"
+                  src="https://dev.pristinegreencleaning.com/assets/icons/couch-cleaning-sofa-cleaning-NYC-icon.png"
+                  style
+                />
+                <a href="">Couch Cleaning</a>
+              </li>
+              <li>
+                <img
+                  rel="canonical"
+                  class="lazy"
+                  alt="Vehicle and Auto Cleaning"
+                  height="54"
+                  width="54"
+                  src="https://dev.pristinegreencleaning.com/assets/icons/auto-interior-cleaning-icon.png"
+                  style
+                />
+                <a href="#"> Auto Interior Cleaning </a>
+              </li>
+              <li>
+                <img
+                  rel="canonical"
+                  class="lazy"
+                  alt="Pet Odor Removal and Pet Urine Removal Services"
+                  height="54"
+                  width="54"
+                  src="https://dev.pristinegreencleaning.com/assets/icons/carpet-cleaning-pet-stain-pet-odor-removal-service-icon.png"
+                  style
+                />
+                <a href="#"> Pet Stain and Odor Removal </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- serivce lady image -->
+        <div class="service-container-img">
+          <img
+            src="https://pristinegreencleaning.com/assets/images/Green-Carpet-Cleaning-Van-NYC-small-not.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
+    <!-- Company info section -->
+    <section class="companyinfo-section">
+      <div class="companyinfo-section-container">
+        <h2 class="companyinfo-section-container-title">
+          Rated 5-Stars Carpet and Upholstery Cleaning in NYC, Brooklyn, &
+          Queens
+        </h2>
+        <p>
+          Whatever rug shampooing or furniture steam cleaning service you need,
+          our technicians have your back in Manhattan, Queens , BK, Long Island,
+          & the Bronx. As a 5-star rated carpet cleaning company, our services
+          offer you the best in a variety of upholstery cleaning and carpet
+          cleaning.
+        </p>
+        <p>
+          PExperts in carpet, mattress, couch, mattress, rug, upholstery, and
+          even oriental rug cleaning. PristineGreen Cleaning is proud to be a
+          top carpet cleaning service provider in NYC. Offering a variety of
+          services including rug shampooing and furniture steam cleaning
+          services, we serve our customers in all five boroughs of NYC (Queens,
+          Brooklyn, Manhattan, Bronx & Staten Island) and beyond to Long Island
+          and New Jersey.
+        </p>
+      </div>
+    </section>
+
+    <!-- call us section -->
+    <section class="callus-section">
+      <div class="callus-section-container">
+        <h5 class="font-1">Call us for a Free Quote</h5>
+        <a
+          style="
+            color: white;
+            font-weight: bold;
+            font-size: larger;
+            line-height: 72px;
+          "
+          href="tel:347-871-6530"
+          >347-871-6530</a
+        >
+        <p>
+          Voted 5-Star Top Carpet Cleaner and Upholstery Cleaner in NYC,
+          Brooklyn & Queens. Our customer service hours are 9am to 9pm, 7 days a
+          week.
+        </p>
+      </div>
+    </section>
+
     <!-- footer -->
     <footer>
       <!-- section 1 -->
@@ -788,7 +1083,7 @@
           <a href="#">Privacy Policy</a> |
           <a href="#">Sitemap</a>
         </div>
-        <div>
+        <div class="footer-2-copyright">
           <span>© 2023 PristineGreen Cleaning, LLC. All rights reserved.</span>
         </div>
       </div>
