--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <!-- Book now seciton -->
         <div class="booknow-section flex">
           <input type="text" class="book-now_input" />
-          <button class="book-now_btn">Book now</button>
+          <button class="book-now_btn">BOOK NOW</button>
         </div>
       </div>
     </main>
@@ -815,7 +815,7 @@
           style="
             color: white;
             font-weight: bold;
-            font-size: larger;
+            font-size: 1.6rem;
             line-height: 72px;
           "
           href="tel:347-871-6530"
