FAQs and footer section updated

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
     <section class="callback-form-section">
       <div class="callback-form-section-container">
         <div
-          class="flex callback-form-section-container-1 gap-1 justify-center item-center"
+          class="flex callback-form-section-container-1 justify-center item-center"
         >
           <span class="callback-form-section-container-title"
             >Request Carpet and Upholstery Cleaning Now!
@@ -1011,7 +1011,7 @@
                 <a href="coupon.html">Coupon </a>
               </li>
               <li>
-                <a href="/blog.html">Coupon </a>
+                <a href="/index_blog.html">Coupon </a>
               </li>
             </ul>
           </div>
