--- a/index_service.html
+++ b/index_service.html
@@ -463,7 +463,7 @@
                 <a href="/coupon.html">Coupon </a>
               </li>
               <li>
-                <a href="/blog.html">Coupon </a>
+                <a href="/index_blog.html">Blog </a>
               </li>
             </ul>
           </div>
