--- a/carpet.html
+++ b/carpet.html
@@ -269,10 +269,8 @@
     <!-- main content section  -->
 
     <section>
-      <div
-        class="container-sm py-5 px-0 main-content-section-container text-lightgray"
-      >
-        <h3 class="text-center text-green fs-1 py-2">CARPET CLEANING</h3>
+      <div class="container py-5 main-content-section text-lightgray">
+        <h3 class="text-center text-green fs-1 py-5">CARPET CLEANING</h3>
         <p>
           <strong>
             Rated top in carpet shampooing and cleaning, PristineGreen
@@ -362,9 +360,7 @@
 
     <!-- Services section -->
     <section class="services-section">
-      <div
-        class="services-section-container flex flex-col justify-center item-center"
-      >
+      <div class="py-5 p-md-3 p-xl-5 flex flex-col justify-center item-center">
         <!-- services section header -->
         <div class="services-section-header">
           <p>PRISTINEGREEN CLEANING</p>
@@ -375,66 +371,140 @@
           <p>Offering Both Commercial & Residential Carpet Cleaning Services</p>
         </div>
         <!-- section accordion & image -->
-        <div class="services-section-accordion flex justify-center">
+        <div
+          class="container row justify-content-center align-items-center py-4 overflow-hidden gap-4"
+        >
           <!-- accordion -->
-          <div class="services-section-accordion-container flex flex-col">
-            <div class="services-section-accordion-containers">
-              <div class="services-section-accordion-header">
-                <span>What services do you provide?</span>
-                <button>
-                  <i class="fa-sharp fa-solid fa-chevron-down"></i>
-                </button>
+          <div
+            class="services-section-accordion-container flex flex-col col-12 col-lg-5 col-xl-4"
+          >
+            <div class="accordion flex flex-column gap-3" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button services-section-accordion-header"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseOne"
+                    aria-expanded="true"
+                    aria-controls="collapseOne"
+                  >
+                    What services do you provide?
+                  </button>
+                </h2>
+                <div
+                  id="collapseOne"
+                  class="accordion-collapse collapse show"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      We provide a variety of upholstery and carpet cleaner
+                      services in NYC including sofa cleaning, area rug
+                      cleaning, oriental rug cleaning, traditional rug cleaning,
+                      mattress cleaning, couch cleaning, armchair cleaning,
+                      furniture cleaning and more.
+                    </p>
+                  </div>
+                </div>
               </div>
-              <div class="services-section-accordion-content">
-                <p>
-                  We provide a variety of upholstery and carpet cleaner services
-                  in NYC including sofa cleaning, area rug cleaning, oriental
-                  rug cleaning, traditional rug cleaning, mattress cleaning,
-                  couch cleaning, armchair cleaning, furniture cleaning and
-                  more.
-                </p>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button services-section-accordion-header collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo"
+                    aria-expanded="false"
+                    aria-controls="collapseTwo"
+                  >
+                    Where do you service?
+                  </button>
+                </h2>
+                <div
+                  id="collapseTwo"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      We provide our carpet cleaner services to the NYC boroughs
+                      and surrouding rea. These areas include Brooklyn, Queens,
+                      Manhattan, Staten Island, New Jersey, Long Island, and
+                      more
+                    </p>
+                  </div>
+                </div>
               </div>
-            </div>
-            <div class="services-section-accordion-containers">
-              <div class="services-section-accordion-header">
-                <span>What services do you provide?</span>
-                <button>
-                  <i class="fa-sharp fa-solid fa-chevron-down"></i>
-                </button>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button services-section-accordion-header collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree"
+                    aria-expanded="false"
+                    aria-controls="collapseThree"
+                  >
+                    How is your cleaning different?
+                  </button>
+                </h2>
+                <div
+                  id="collapseThree"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      What sets us apart from other NYC carpet cleaning
+                      companies is that we only use green and non-toxic products
+                      in our upholstery and carpet cleaning services. These
+                      products have been certified by the US EPA as part of
+                      their "Safer Choice" program. We also offer incredible
+                      service, hence our average 4.9/5 star rating at all of our
+                      locations!
+                    </p>
+                  </div>
+                </div>
               </div>
-
-              <div class="services-section-accordion-content hidden">
-                <p></p>
-              </div>
-            </div>
-            <div class="services-section-accordion-containers">
-              <div class="services-section-accordion-header">
-                <span>What services do you provide?</span>
-                <button>
-                  <i class="fa-sharp fa-solid fa-chevron-down"></i>
-                </button>
-              </div>
-              <div class="services-section-accordion-content hidden">
-                <p></p>
-              </div>
-            </div>
-            <div class="services-section-accordion-containers">
-              <div class="services-section-accordion-header">
-                <span>What services do you provide?</span>
-                <button>
-                  <i class="fa-sharp fa-solid fa-chevron-down"></i>
-                </button>
-              </div>
-              <div class="services-section-accordion-content hidden">
-                <p></p>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button services-section-accordion-header collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseFour"
+                    aria-expanded="false"
+                    aria-controls="collapseFour"
+                  >
+                    Why choose us?
+                  </button>
+                </h2>
+                <div
+                  id="collapseFour"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      If you are looking for a trusted and recommended BYC
+                      carpet cleaning company that not only provides incredible
+                      service but also uses top=of-the-line green products that
+                      are safe for you, your family, and your pets, then we are
+                      the right choice! You can't get better than PristineGreen!
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
+
           <!-- img -->
-          <div class="service-section-img hidden">
+          <div class="service-section-img col">
             <img
               src="https://pristinegreencleaning.com/assets/images/after-clean.jpg"
               alt=""
+              style="max-width: 100%"
             />
           </div>
         </div>
@@ -445,7 +515,7 @@
     <section class="callback-form-section">
       <div class="callback-form-section-container">
         <div
-          class="flex callback-form-section-container-1 gap-1 justify-center item-center"
+          class="flex callback-form-section-container-1 justify-center item-center"
         >
           <span class="callback-form-section-container-title"
             >Request Carpet and Upholstery Cleaning Now!
@@ -609,7 +679,7 @@
     </section>
     <!-- Company info section -->
     <section class="companyinfo-section">
-      <div class="companyinfo-section-container">
+      <div class="companyinfo-section-container container">
         <h2 class="companyinfo-section-container-title">
           Rated 5-Stars Carpet and Upholstery Cleaning in NYC, Brooklyn, &
           Queens
@@ -837,13 +907,13 @@
             <p class="footer-heading">GET IN TOUCH</p>
             <ul class="footer-1-container__Service-links flex flex-col gap-1">
               <li>
-                <a href="#">PristineGreen Upholstery and Carpet Cleaning</a>
+                <span>PristineGreen Upholstery and Carpet Cleaning</span>
               </li>
               <li>
-                <a href="#">115 E 23rd St 3rd floor</a>
+                <span>115 E 23rd St 3rd floor</span>
               </li>
               <li>
-                <a href="#">New York, NY 10010</a>
+                <span>New York, NY 10010</span>
               </li>
               <li>
                 <a href="#">347-871-6530</a>
@@ -853,13 +923,13 @@
               </li>
               <br />
               <li>
-                <a href="#">PristineGreen Upholstery and Carpet Cleaning </a>
+                <span>PristineGreen Upholstery and Carpet Cleaning </span>
               </li>
               <li>
-                <a href="#">265 E 78th St #6E, </a>
+                <span>265 E 78th St #6E, </span>
               </li>
               <li>
-                <a href="#">New York, NY 10075</a>
+                <span>New York, NY 10075</span>
               </li>
               <li>
                 <a href="#">917-727-0936 </a>
@@ -869,13 +939,13 @@
               </li>
               <br />
               <li>
-                <a href="#">PristineGreen Upholstery and Carpet Cleaning </a>
+                <span>PristineGreen Upholstery and Carpet Cleaning </span>
               </li>
               <li>
-                <a href="#">6705 Myrtle Ave #1015 </a>
+                <span>6705 Myrtle Ave #1015 </span>
               </li>
               <li>
-                <a href="#">Queens, NY 11385</a>
+                <span>Queens, NY 11385</span>
               </li>
               <li>
                 <a href="#">347-871-6530</a>
@@ -885,13 +955,13 @@
               </li>
               <br />
               <li>
-                <a href="#">PristineGreen Upholstery and Carpet Cleaning </a>
+                <span>PristineGreen Upholstery and Carpet Cleaning </span>
               </li>
               <li>
-                <a href="#">3811 Ditmars Blvd #1068 </a>
+                <span>3811 Ditmars Blvd #1068 </span>
               </li>
               <li>
-                <a href="#">Queens, NY 11105</a>
+                <span>Queens, NY 11105</span>
               </li>
               <li>
                 <a href="#">347-871-6530</a>
