--- a/contact.html
+++ b/contact.html
@@ -619,7 +619,7 @@
                 <a href="/coupon.html">Coupon </a>
               </li>
               <li>
-                <a href="/blog.html">Blog </a>
+                <a href="/index_blog.html">Blog </a>
               </li>
             </ul>
           </div>
