--- a/our_branch.html
+++ b/our_branch.html
@@ -743,10 +743,13 @@
                 <a href="#">Mattress Cleaning</a>
               </li>
               <li>
-                <a href="#">FAQ’s </a>
+                <a href="faq.html">FAQ’s </a>
               </li>
               <li>
-                <a href="#">Coupon </a>
+                <a href="/coupon.html">Coupon </a>
+              </li>
+              <li>
+                <a href="/index_blog.html">Blog </a>
               </li>
             </ul>
           </div>
