template about us and call us section

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                           class="flex flex-col cleaning-services-hover-section"
                         >
                           <p class="">
-                            <a href="/carpet.html">Carpet Cleaning</a>
+                            <a href="#">Carpet Cleaning</a>
                           </p>
                           <p>
                             <a href="#">Upholstery Cleaning</a>
@@ -230,196 +230,42 @@
       </div>
     </div>
 
-    <!-- Contact us banner section -->
+    <!-- About us banner section -->
     <section class="position-relative">
       <img
         class="w-100"
-        height="130"
-        src="https://pristinegreencleaning.com/assets/images/rug-cleaner-nyc-contact-us.webp"
+        height="112"
+        src="https://pristinegreencleaning.com/assets/images/carpet-cleaning-services--Queens-11105-PristineGreen-Upholstery-and-Carpet-Cleaning-rug-cleaner--NY.webp"
       />
       <div
         class="position-absolute w-100 h-100 top-0 d-flex justify-center align-items-end"
       >
-        <p class="fs-1 font-median text-white p-0 mb-1">Contact Us</p>
+        <h2 class="fs-1 font-median text-green-1 p-0 mb-1">About Us</h2>
       </div>
     </section>
-    <!-- Contact us page section -->
+    <!-- About us page section -->
     <section>
-      <div class="container flex flex-column flex-lg-row py-5">
-        <!-- contact us form -->
-        <div
-          class="col-12 col-lg-7 col-xl-8 d-flex flex-column my-5 border-3 py-2 gap-3 pe-md-5"
-        >
-          <h3 class="fs-3 font-median text-blue">Contact Us</h3>
-          <p class="text-lightgray p-0">
-            Contact our sales team below! Our knowledgable representatives will
-            respond shortly and provide you with a free quote and answer any
-            questions you have.
-          </p>
-          <form action="" class="d-flex flex-column gap-4 pe-lg-5">
-            <input
-              type="text"
-              class="border border-1 rounded-2 p-2"
-              placeholder="Name"
-            />
-            <input
-              type="text"
-              class="border border-1 rounded-2 p-2"
-              placeholder="Email Address"
-            />
-            <input
-              type="text"
-              class="border border-1 rounded-2 p-2"
-              placeholder="Phone"
-            />
-            <textarea
-              name=""
-              id=""
-              cols="30"
-              rows="4"
-              placeholder="Message"
-              class="border border-1 rounded-2 p-2"
-            ></textarea>
-            <button
-              type="submit"
-              class="btn-lightgreen tex-white col-2 py-2 rounded-1"
-            >
-              Contact Us
-            </button>
-          </form>
-        </div>
-        <!-- social media link and map -->
-        <div class="col p-5">
-          <!-- visit us -->
-          <div
-            class="icon-list text-center p-4 d-flex flex-column gap-2 border-bottom"
-          >
-            <h3 class="fs-3 font-median text-blue">Visit Us</h3>
-            <div class="py-1">
-              <a
-                href="https://www.facebook.com/PristineGreen-Upholstery-and-Carpet-Cleaning-380402999024630/?__tn__=%2Cg/"
-                target="_blank"
-              >
-                <img
-                  alt="facebook"
-                  width="32px"
-                  height="32px"
-                  class="lazy"
-                  src="https://pristinegreencleaning.com/assets/icons/png-transparent-facebook-logo-social-media-facebook-computer-icons-logo-facebook-icon-internet-facebook-icon-500px.png"
-                  style=""
-                />
-              </a>
-              <a href="https://twitter.com/PGCarpetClean" target="_blank">
-                <img
-                  alt="twitter"
-                  width="32px"
-                  height="32px"
-                  class="lazy"
-                  src="https://pristinegreencleaning.com/assets/icons/twwi.png"
-                  style=""
-                />
-              </a>
-              <a
-                href="https://www.instagram.com/pristinegreencleaning/"
-                target="_blank"
-              >
-                <img
-                  alt="instagram"
-                  width="32px"
-                  height="32px"
-                  class="lazy"
-                  src="https://pristinegreencleaning.com/assets/icons/instagram-new.png"
-                  style=""
-                />
-              </a>
-            </div>
-          </div>
-          <!-- Contact Info & Map -->
-          <div class="text-center">
-            <div class="p-3 border-bottom">
-              <h3 class="text-blue font-median py-2">Contact Info</h3>
-              <p class="mb-0">Contact</p>
-              <p>
-                <a href="tel:3478716530">(347) 871-6530</a><br />
-                <a href="mailto:sales@pristinegreencleaning.com"
-                  >sales@pristinegreencleaning.com</a
-                >
-              </p>
-            </div>
-
-            <div class="address-info py-3">
-              <p><strong>Manhattan</strong></p>
-              <a
-                href="https://www.google.com/maps/place/PristineGreen+Upholstery+and+Carpet+Cleaning/@40.6987237,-73.9706372,12z/data=!4m8!1m2!2m1!1spristinegreen+cleaning!3m4!1s0x89c25c2f585001ef:0xe845b54866df15ad!8m2!3d40.740055!4d-73.985528"
-              >
-                <img
-                  alt="Astoria"
-                  class="lazy"
-                  width="200"
-                  height="200"
-                  src="https://pristinegreencleaning.com/assets/images/map/Manhattan.webp"
-                  style=""
-                />
-              </a>
-              <p>
-                <a
-                  href="https://www.google.com/maps/place/PristineGreen+Upholstery+and+Carpet+Cleaning/@40.6987237,-73.9706372,12z/data=!4m8!1m2!2m1!1spristinegreen+cleaning!3m4!1s0x89c25c2f585001ef:0xe845b54866df15ad!8m2!3d40.740055!4d-73.985528"
-                >
-                  115 E 23rd St 3rd Floor<br />
-                  New York, NY 10010
-                </a>
-              </p>
-            </div>
-
-            <div class="address-info py-3">
-              <p><strong>Astoria</strong></p>
-              <a
-                href="https://www.google.com/maps/place/PristineGreen+Upholstery+and+Carpet+Cleaning/@40.6985058,-73.9706371,12z/data=!4m8!1m2!2m1!1spristinegreen+cleaning!3m4!1s0x89c25f49eda93537:0xdcc4dea443c7443!8m2!3d40.7732257!4d-73.9062583"
-              >
-                <img
-                  alt="Astoria"
-                  class="lazy"
-                  width="200"
-                  height="200"
-                  src="https://pristinegreencleaning.com/assets/images/map/Astoria.webp"
-                  style=""
-                />
-              </a>
-              <p>
-                <a
-                  href="https://www.google.com/maps/place/PristineGreen+Upholstery+and+Carpet+Cleaning/@40.6985058,-73.9706371,12z/data=!4m8!1m2!2m1!1spristinegreen+cleaning!3m4!1s0x89c25f49eda93537:0xdcc4dea443c7443!8m2!3d40.7732257!4d-73.9062583"
-                >
-                  3811 Ditmars Blvd #1068<br />
-                  Astoria, NY 11105
-                </a>
-              </p>
-            </div>
-
-            <div class="address-info">
-              <p><strong>Queens</strong></p>
-              <a
-                href="https://www.google.com/maps/place/PristineGreen+Upholstery+and+Carpet+Cleaning/@40.7016013,-73.888443,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25d487b9346b5:0x11d8fb16e21b2f67!8m2!3d40.6981707!4d-73.9005965"
-              >
-                <img
-                  alt="Queens"
-                  class="lazy"
-                  width="200"
-                  height="200"
-                  src="https://pristinegreencleaning.com/assets/images/map/Queens.webp"
-                  style=""
-                />
-              </a>
-              <p>
-                <a
-                  href="https://www.google.com/maps/place/PristineGreen+Upholstery+and+Carpet+Cleaning/@40.7016013,-73.888443,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25d487b9346b5:0x11d8fb16e21b2f67!8m2!3d40.6981707!4d-73.9005965"
-                >
-                  6705 Myrtle Ave #1015<br />
-                  Queens, NY 11385
-                </a>
-              </p>
-            </div>
-          </div>
-        </div>
+      <div class="container py-5 text-lightgray">
+        <h2 class="text-blue text-center py-5">
+          EXPERTS IN UPHOLSTERY AND CARPET CLEANING IN NYC
+        </h2>
+        <p>
+          We understand you have invested in your carpets at home or at the
+          workplace to give the best first impressions to guests or clients. But
+          this investment can easily turn into an eyesore without the proper
+          maintenance as dirt, grime, and odors build up. It can be tempting to
+          try to DIY and clean your carpets yourself but this.
+        </p>
+        <p>
+          PristineGreen Carpet & Upholstery Cleaning Service uses five
+          proprietary, eco-friendly, non-toxic steps to get your fabrics looking
+          as good as new. We take pride and care to deep clean and protect your
+          upholstery & carpet, while removing allergens, dirt and stains from
+          deep within the fibers. Don’t just take our word for it, we have over
+          70 inrecible 5-star reviews from customers in Manhattan, Queens, &
+          Brooklyn, that used our carpet cleaing services and loved what we did
+          for them! Give us a call today and let us impress you!
+        </p>
       </div>
     </section>
 
@@ -447,11 +293,11 @@
 
     <!-- footer -->
     <footer>
-      <!-- section 1 -->
+      <!-- footer section 1 -->
       <div class="footer-1">
         <div class="footer-1-container flex justify-between gap-2">
           <div class="footer-1-container__imgs flex flex-col">
-            <div class="flex gap-4">
+            <div class="flex gap-1">
               <a href="#">
                 <img
                   rel="canonical"
@@ -589,10 +435,10 @@
             <p class="footer-heading">OUR LINKS</p>
             <ul class="footer-1-container__Service-links flex flex-col gap-1">
               <li>
-                <a href="/about.html">About Us</a>
+                <a href="#">About Us</a>
               </li>
               <li>
-                <a href="/carpet.html">Carpet Cleaning</a>
+                <a href="#">Carpet Cleaning</a>
               </li>
               <li>
                 <a href="#">Upholstery Cleaning</a>
@@ -613,13 +459,13 @@
                 <a href="#">Mattress Cleaning</a>
               </li>
               <li>
-                <a href="/faq.html">FAQ’s </a>
+                <a href="faq.html">FAQ’s </a>
               </li>
               <li>
-                <a href="coupon.html">Coupon </a>
+                <a href="/coupon.html">Coupon </a>
               </li>
               <li>
-                <a href="/blog.html">Coupon </a>
+                <a href="/index_blog.html">Blog </a>
               </li>
             </ul>
           </div>
@@ -627,13 +473,13 @@
             <p class="footer-heading">GET IN TOUCH</p>
             <ul class="footer-1-container__Service-links flex flex-col gap-1">
               <li>
-                <span>PristineGreen Upholstery and Carpet Cleaning</span>
+                <a href="#">PristineGreen Upholstery and Carpet Cleaning</a>
               </li>
               <li>
-                <span>115 E 23rd St 3rd floor</span>
+                <a href="#">115 E 23rd St 3rd floor</a>
               </li>
               <li>
-                <span>New York, NY 10010</span>
+                <a href="#">New York, NY 10010</a>
               </li>
               <li>
                 <a href="#">347-871-6530</a>
@@ -643,13 +489,13 @@
               </li>
               <br />
               <li>
-                <span>PristineGreen Upholstery and Carpet Cleaning </span>
+                <a href="#">PristineGreen Upholstery and Carpet Cleaning </a>
               </li>
               <li>
-                <span>265 E 78th St #6E, </span>
+                <a href="#">265 E 78th St #6E, </a>
               </li>
               <li>
-                <span>New York, NY 10075</span>
+                <a href="#">New York, NY 10075</a>
               </li>
               <li>
                 <a href="#">917-727-0936 </a>
@@ -659,13 +505,13 @@
               </li>
               <br />
               <li>
-                <span>PristineGreen Upholstery and Carpet Cleaning </span>
+                <a href="#">PristineGreen Upholstery and Carpet Cleaning </a>
               </li>
               <li>
-                <span>6705 Myrtle Ave #1015 </span>
+                <a href="#">6705 Myrtle Ave #1015 </a>
               </li>
               <li>
-                <span>Queens, NY 11385</span>
+                <a href="#">Queens, NY 11385</a>
               </li>
               <li>
                 <a href="#">347-871-6530</a>
@@ -675,13 +521,13 @@
               </li>
               <br />
               <li>
-                <span>PristineGreen Upholstery and Carpet Cleaning </span>
+                <a href="#">PristineGreen Upholstery and Carpet Cleaning </a>
               </li>
               <li>
-                <span>3811 Ditmars Blvd #1068 </span>
+                <a href="#">3811 Ditmars Blvd #1068 </a>
               </li>
               <li>
-                <span>Queens, NY 11105</span>
+                <a href="#">Queens, NY 11105</a>
               </li>
               <li>
                 <a href="#">347-871-6530</a>
