--- a/carpet.html
+++ b/carpet.html
@@ -703,6 +703,42 @@
       </div>
     </section>
 
+    <!-- what serivces you need section -->
+    <section>
+      <div class="container-fluid row m-0 p-0 p-md-4">
+        <div
+          class="mx-auto col-12 col-lg-6 col-xl-7 d-flex flex-column align-items-center justify-content-center gap-3"
+        >
+          <h4 class="text-green-1 py-3">What Serivces You Need?</h4>
+          <form action="" class="d-flex flex-column gap-4 w-100">
+            <input
+              type="text"
+              class="py-3 border rounded-3 col-12 col-sm-9 px-3 col-md-10 col-lg-8 col-xl-6 mx-auto"
+              required
+              placeholder="Enter Your Phone Number"
+            />
+            <button
+              type="submit "
+              class="py-3 border rounded-5 col-12 col-sm-9 px-3 col-md-10 col-lg-8 col-xl-6 mx-auto bg-lightgreen tex-white"
+            >
+              WE WILL CALL BACK!
+            </button>
+          </form>
+        </div>
+        <div class="col-lg-6 col-xl-5 p-5 mt-3 text-center text-lg-start">
+          <img
+            rel="canonical"
+            class="lazy phone-vibrate mx-auto"
+            alt="Call Carpet Cleaner NYC NOw"
+            width="416"
+            height="409"
+            src="https://pristinegreencleaning.com/assets/images/index.png"
+            style="max-width: 100%"
+          />
+        </div>
+      </div>
+    </section>
+
     <!-- call us section -->
     <section class="callus-section">
       <div class="callus-section-container">
@@ -731,7 +767,7 @@
       <div class="footer-1">
         <div class="footer-1-container flex justify-between gap-2">
           <div class="footer-1-container__imgs flex flex-col">
-            <div class="flex gap-1">
+            <div class="flex gap-4">
               <a href="#">
                 <img
                   rel="canonical"
