tabbed content section

--- a/carpet.html
+++ b/carpet.html
@@ -707,25 +707,28 @@
     <section>
       <div class="container-fluid row m-0 p-0 p-md-4">
         <div
-          class="mx-auto col-12 col-lg-6 col-xl-7 d-flex flex-column align-items-center justify-content-center gap-3"
+          class="mx-auto col-12 col-lg-6 col-xl-6 d-flex flex-column align-items-center justify-content-center gap-3"
         >
-          <h4 class="text-green-1 py-3">What Serivces You Need?</h4>
-          <form action="" class="d-flex flex-column gap-4 w-100">
+          <form
+            action=""
+            class="d-flex flex-column gap-4 col-12 col-xl-8 ms-auto text-center py-5"
+          >
+            <h4 class="text-green-1 py-3">What Serivces You Need?</h4>
             <input
               type="text"
-              class="py-3 border rounded-3 col-12 col-sm-9 px-3 col-md-10 col-lg-8 col-xl-6 mx-auto"
+              class="py-3 border rounded-3 col-12 col-sm-9 px-3 col-md-8 col-xl-10 mx-auto"
               required
               placeholder="Enter Your Phone Number"
             />
             <button
               type="submit "
-              class="py-3 border rounded-5 col-12 col-sm-9 px-3 col-md-10 col-lg-8 col-xl-6 mx-auto bg-lightgreen tex-white"
+              class="py-3 border rounded-5 col-12 col-sm-9 px-3 col-md-6 col-lg-8 col-xl-6 mx-auto bg-lightgreen tex-white"
             >
               WE WILL CALL BACK!
             </button>
           </form>
         </div>
-        <div class="col-lg-6 col-xl-5 p-5 mt-3 text-center text-lg-start">
+        <div class="col-lg-6 col-xl-6 py-5 text-center text-lg-start">
           <img
             rel="canonical"
             class="lazy phone-vibrate mx-auto"
